--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -10,3 +10,8 @@ Voir l'article: 'See article'
 Bienvenue sur le blog: 'Welcome to the blog'
 Ajout d'un article: 'Adding an article'
 Ajouter: 'Add'
+Pas de commentaire: 'No comments'
+par: 'from'
+Supprimer: 'Delete'
+Modifier: 'Update'
+La page demandée n'existe pas: "The page doesn't exists"
