--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -10,3 +10,8 @@ See article: "Voir l'article"
 Welcome to the blog: 'Bienvenue sur le blog'
 Adding an article: "Ajout d'un article"
 Add: 'Ajouter'
+No comments: 'Pas de commentaires'
+from: 'par'
+Update: 'Modifier'
+Delete: 'Supprimer'
+The page doesn't exists: "La page n'existe pas"
