--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -2,6 +2,7 @@ Accueil: 'Home'
 A propos: 'About'
 Connexion: 'Login'
 Déconnexion: 'Logout'
+Liste des articles: 'List of articles'
 Ajouter un article: 'Add an article'
 Modification dun article: 'Edit an article'
 Contenu accueil: 'Content home'
@@ -15,3 +16,12 @@ par: 'from'
 Supprimer: 'Delete'
 Modifier: 'Update'
 La page demandée n'existe pas: "The page doesn't exists"
+Mot de passe: 'Password'
+Vous êtes connecté en tant que: "You are connected as"
+Page de connexion: 'Login page'
+Votre contenu est identifié comme spam. Veuillez supprimer tout contenu suspect. : 'Your content is identified as spam. Please remove any suspicious content.'
+L'article a bien été ajouté: 'The article has been added'
+L'article a bien été modifié: 'The article has been updated'
+L'article a bien été supprimé: 'The article has been deleted'
+L'article demandé ne peut pas être supprimé.: 'The article requested cannot be deleted.'
+La catégorie demandée n'existe pas.: 'The category requested does not exist.'
