--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -25,3 +25,6 @@ L'article a bien été modifié: 'The article has been updated'
 L'article a bien été supprimé: 'The article has been deleted'
 L'article demandé ne peut pas être supprimé.: 'The article requested cannot be deleted.'
 La catégorie demandée n'existe pas.: 'The category requested does not exist.'
+Titre: 'Title'
+Contenu: 'Content'
+Par: 'By'
