--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -25,3 +25,6 @@ The article has been updated: "L'article a bien été modifié"
 The article has been deleted: "L'article a bien été supprimé"
 The article requested cannot be deleted.: "L'article demandé ne peut pas être supprimé."
 The category requested does not exist.: "La catégorie demandée n'existe pas."
+Title: 'Titre'
+Content: 'Contenu'
+By: 'Par'
