--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -10,6 +10,7 @@ Catégories: 'Categories'
 Voir l'article: 'See article'
 Bienvenue sur le blog: 'Welcome to the blog'
 Ajout d'un article: 'Adding an article'
+Ajouter d'un article: 'Add an article'
 Ajouter: 'Add'
 Pas de commentaire: 'No comments'
 par: 'from'
